# pinelsp

./: LICENSE  NOTICE.md  README.md  package.json
.github/workflows/: rust-ci.yml  rust-release.yml
pine-rs/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  STATUS.md  deny.toml
pine-rs/crates/pine-check/: Cargo.toml
pine-rs/crates/pine-check/src/: lib.rs  logiclint.rs
pine-rs/crates/pine-cli/: Cargo.toml
pine-rs/crates/pine-cli/src/: main.rs
pine-rs/crates/pine-core/: Cargo.toml
pine-rs/crates/pine-core/examples/: diag_fixtures.rs  sexp.rs
pine-rs/crates/pine-core/src/: builtins.rs  imports.rs  lib.rs  symbols.rs  text.rs
pine-rs/crates/pine-core/tests/: resolve_imports.rs
pine-rs/crates/pine-core/tests/fixtures/libs/: error_recovery.pine  math_utils.pine  types_and_enum.pine  with_method.pine
pine-rs/crates/pine-data-codegen/: Cargo.toml
pine-rs/crates/pine-data-codegen/data/: constants.json  function-behavior.json  functions.json  keywords.json  variables.json
pine-rs/crates/pine-data-codegen/scripts/: dump-pine-data.mjs
pine-rs/crates/pine-data-codegen/src/: lib.rs
pine-rs/crates/pine-lsp/: Cargo.toml
pine-rs/crates/pine-lsp/src/: backend.rs  features.rs  main.rs
pine-rs/crates/pine-lsp/tests/: lsp_stdio.rs
pine-rs/crates/pine-lsp/tests/fixtures/libs/: math_utils.pine
pine-rs/crates/pine-mcp/: Cargo.toml
pine-rs/crates/pine-mcp/src/: main.rs
pine-rs/crates/tree-sitter-pine/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter-pine.wasm  tree-sitter.json
pine-rs/crates/tree-sitter-pine/bindings/c/: tree-sitter-pine.pc.in
pine-rs/crates/tree-sitter-pine/bindings/cpp/: tree-sitter-pine.hpp
pine-rs/crates/tree-sitter-pine/bindings/go/: binding.go  binding_test.go
pine-rs/crates/tree-sitter-pine/bindings/node/: binding.cc  index.d.ts  index.js
pine-rs/crates/tree-sitter-pine/bindings/python/tests/: test_binding.py
pine-rs/crates/tree-sitter-pine/bindings/python/tree_sitter_pine/: __init__.py  binding.c
pine-rs/crates/tree-sitter-pine/bindings/rust/: lib.rs
pine-rs/crates/tree-sitter-pine/bindings/swift/TreeSitterPineTests/: TreeSitterPineTests.swift
pine-rs/crates/tree-sitter-pine/examples/nextjs-demo/: README.md  package.json
pine-rs/crates/tree-sitter-pine/examples/nextjs-demo/app/: page.tsx
pine-rs/crates/tree-sitter-pine/src/: grammar.json  node-types.json  parser.c  scanner.c
pine-rs/scripts/: differential.py
scripts/: build-extension.js  build-grammar.sh
