[workspace]
resolver = "2"
members = [
    "crates/tree-sitter-pine",
    "crates/pine-core",
    "crates/pine-data-codegen",
    "crates/pine-check",
    "crates/pine-lsp",
    "crates/pine-cli",
    "crates/pine-mcp",
]

# Shared metadata + dependency versions for the Pine Rust toolchain.
# Crates added in later phases (pine-data-codegen, pine-check, pine-lsp,
# pine-mcp, pine-cli) join `members` as they land.
[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
tree-sitter = "0.26"
tree-sitter-pine = { path = "crates/tree-sitter-pine" }
pine-core = { path = "crates/pine-core" }
pine-data-codegen = { path = "crates/pine-data-codegen" }
pine-check = { path = "crates/pine-check" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-lsp = "0.20"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread", "sync"] }
