[workspace]
resolver = "2"
members = [
    "crates/tree-sitter-pine",
    "crates/pine-core",
    "crates/pine-data-codegen",
    "crates/pine-check",
    "crates/pine-lsp",
    "crates/pine-cli",
    "crates/pine-mcp",
]

# Shared metadata + dependency versions for the Pine Rust toolchain.
# Crates added in later phases (pine-data-codegen, pine-check, pine-lsp,
# pine-mcp, pine-cli) join `members` as they land.
[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/folknor/pinescript-vscode-extension"
description = "Pine Script v6 Rust toolchain (parser, checker, LSP, CLI, MCP)"
keywords = ["pine", "pinescript", "tradingview", "lsp", "tree-sitter"]
categories = ["parser-implementations", "development-tools"]
# MSRV: edition 2024 needs >=1.85; the let-chains used in pine-check are
# stabilized in 1.88, so 1.88 is the true floor for the workspace.
rust-version = "1.88"

[workspace.dependencies]
tree-sitter = "0.26"
tree-sitter-pine = { path = "crates/tree-sitter-pine" }
pine-core = { path = "crates/pine-core" }
pine-data-codegen = { path = "crates/pine-data-codegen" }
pine-check = { path = "crates/pine-check" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-lsp = "0.20"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread", "sync"] }
