[package]
name = "pine-check"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
description = "Semantic analysis (type/lint checks) for Pine Script v6"

[dependencies]
pine-core.workspace = true
tree-sitter.workspace = true
