[package]
name = "pine-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
description = "Pine Script v6 command-line linter"

[[bin]]
name = "pine-cli"
path = "src/main.rs"

[dependencies]
pine-core.workspace = true
pine-check.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
