[package]
name = "pine-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
description = "Parsing + document model for the Pine Script Rust toolchain"

[dependencies]
tree-sitter.workspace = true
tree-sitter-pine.workspace = true
pine-data-codegen.workspace = true
