[package]
name = "pine-data-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
description = "Embedded Pine v6 builtins database (functions/variables/constants/keywords)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
