[package]
name = "pine-lsp"
version = "0.0.0"
edition.workspace = true
license.workspace = true
description = "Pine Script v6 language server (tower-lsp)"
keywords = ["pine", "pinescript", "lsp", "language-server", "tradingview"]
categories = ["development-tools"]
repository = "https://github.com/zelosleone/pinescript-vsc-server-rust"

[[bin]]
name = "pine-lsp"
path = "src/main.rs"

[dependencies]
pine-core.workspace = true
pine-check.workspace = true
tree-sitter.workspace = true
tower-lsp.workspace = true
tokio.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }

[dev-dependencies]
serde_json = "1"
