[package]
name = "pine-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
description = "Pine Script v6 MCP server (validate / lookup / list / format)"

[[bin]]
name = "pine-mcp"
path = "src/main.rs"

[dependencies]
pine-core.workspace = true
pine-check.workspace = true
serde_json.workspace = true
